# jsk_mbzirc_perception

./: .gitignore  .gitmodules
task1_vision_pkg/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
task1_vision_pkg/cfg/: Task1VisionPkg.cfg
task1_vision_pkg/data/: negative.txt  positive.txt  positive.txt.old  svm.xml  test_negative.txt  test_positive.txt  train_negative.txt  train_positive.txt
task1_vision_pkg/data/negative2/: train.txt
task1_vision_pkg/data/negative3/: negative.txt.old1  train.txt
task1_vision_pkg/data/positive2/: tain.txt
task1_vision_pkg/include/task1_vision_pkg/: CMT.h  keypoint_classifier.h  uav_detect_landing_region.h  uav_detect_landing_region.h~  uav_detect_landing_region_trainer.h  uav_detect_landing_region_trainer.h~  uav_tracking.h
task1_vision_pkg/include/task1_vision_pkg/skeletonization/: gpu_skeletonization.h  gpu_skeletonization.h~  skeletonization_kernel.h  skeletonization_kernel.h~
task1_vision_pkg/launch/: task1_vision_pkg.launch  uav_detect_landing_region.launch  uav_detect_landing_region.launch~  uav_tracking.launch
task1_vision_pkg/models/: uav_landing_region_iter_10000.caffemodel  uav_landing_region_iter_10000.solverstate  uav_landing_region_iter_5000.caffemodel  uav_landing_region_iter_5000.solverstate  uav_landing_region_solver.prototxt  uav_landing_region_test.prototxt  uav_landing_region_train.prototxt
task1_vision_pkg/script/: caffe_hdf5_convertor.py  caffe_network.py  dijkstra_shortest_path.py  landing_marker_close_perception.py  track_region_mapping.py  tracking_worldcoords_projection.py  uav_heliport_alignment_prediction.py
task1_vision_pkg/src/: #uav_detect_landing_region_node.cpp#  .#uav_detect_landing_region_node.cpp  .#uav_detect_landing_region_trainer.cpp  histogram_of_oriented_gradients.cpp  uav_detect_landing_region_node.cpp  uav_detect_landing_region_node.cpp~  uav_detect_landing_region_trainer.cpp  uav_detect_landing_region_trainer.cpp~
task1_vision_pkg/src/img2pointcloud/: uav_img2pointcloud.cpp
task1_vision_pkg/src/skeletonization/: #gpu_skeletonization_node.cpp#  .#gpu_skeletonization_node.cpp  gpu_skeletonization_node.cpp  gpu_skeletonization_node.cpp~  skeletonization_kernel.cu  skeletonization_kernel.cu~
task1_vision_pkg/src/tracking/: CMT.cpp  keypoint_classifier.cpp  uav_tracking_node.cpp
task1_vision_pkg/src/tracking/cuda/: cmt_kernel.cu
task1_vision_pkg/srv/: CaffeHdf5Convertor.srv  CaffeNetwork.srv
(+3 files in other folders)
